force-app/main/default/objects/Process_Task__c/Process_Task__c.object-meta.xml
<CustomObject>
    <label>Process Task</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Process Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Tasks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>