force-app/main/default/objects/Process_Task__c/fields/Account_Creation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Reason__c</fullName>
    <label>Account Creation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>