force-app/main/default/objects/Process_Task__c/fields/Account_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Decline_Reason__c</fullName>
    <label>Account Approval/Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>