force-app/main/default/objects/Process_Task__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>eNett_Contract__r.Account_Name__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>