force-app/main/default/objects/Process_Task__c/fields/Agreement_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Term_Years__c</fullName>
    <inlineHelpText>Regional Sales and Legal Approval will be required for entries other than 1,2,3,4,or 5 years.</inlineHelpText>
    <label>Agreement Term (Years)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>