force-app/main/default/objects/Process_Task__c/fields/Attainable_TTV_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Attainable_TTV_Monthly__c</fullName>
    <label>Attainable GDV Monthly</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>