force-app/main/default/objects/Process_Task__c/fields/Chargeback_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Processing_Fee__c</fullName>
    <inlineHelpText>This is required in order to generate a contract document.</inlineHelpText>
    <label>Chargeback Processing Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>