force-app/main/default/objects/Process_Task__c/fields/Contract_Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Affiliate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Process Tasks (Contracted Entity)</relationshipLabel>
    <relationshipName>Contracted_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>