force-app/main/default/objects/Process_Task__c/fields/Contract_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Contract_Further_Details__c</fullName>
    <label>Further Details</label>
    <type>TextArea</type>
</CustomField>