force-app/main/default/objects/Process_Task__c/fields/Contract_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Contract_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Approved by Sales</fullName>
            </value>
            <value>
                <fullName>Deal Rejected by Sales</fullName>
            </value>
            <value>
                <fullName>Deal Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Deal Rejected by Legal</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Modifications made</fullName>
            </value>
            <value>
                <fullName>eNett Sign-off received</fullName>
            </value>
            <value>
                <fullName>eNett Sign-off rejected</fullName>
            </value>
            <value>
                <fullName>N/A - Existing Customer</fullName>
            </value>
            <value>
                <fullName>1. Won - GDV Met</fullName>
            </value>
            <value>
                <fullName>2. Won - GDV Not Met</fullName>
            </value>
            <value>
                <fullName>3. Lost</fullName>
            </value>
            <value>
                <fullName>Deal Approved by Finance</fullName>
            </value>
            <value>
                <fullName>Deal Rejected by Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>