force-app/main/default/objects/Process_Task__c/fields/Contract_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rejection_Reason__c</fullName>
    <inlineHelpText>This field is mandatory when deal has been rejected.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>