force-app/main/default/objects/Process_Task__c/fields/Contract_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Required__c</fullName>
    <label>Contract Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>