force-app/main/default/objects/Process_Task__c/fields/DD_Approved__c.field-meta.xml
<CustomField>
    <fullName>DD_Approved__c</fullName>
    <formula>IF(ISPICKVAL(eNett_Contract__r.Account_Name__r.DD_Status__c, &quot;DD Approved&quot;), TRUE, FALSE)</formula>
    <label>DD Approved</label>
    <type>Checkbox</type>
</CustomField>