force-app/main/default/objects/Process_Task__c/fields/Delivery_Task_History__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Task_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Task History</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Process Task History</relationshipLabel>
    <relationshipName>Process_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>