force-app/main/default/objects/Process_Task__c/fields/Delivery_Task_Open__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Task_Open__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Task Open</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Open Process Tasks</relationshipLabel>
    <relationshipName>Process_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>