force-app/main/default/objects/Process_Task__c/fields/Delivery_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Open Process Tasks</relationshipLabel>
    <relationshipName>Process_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>