force-app/main/default/objects/Process_Task__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery - Desktop</fullName>
            </value>
            <value>
                <fullName>Delivery - API</fullName>
            </value>
            <value>
                <fullName>Delivery Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>