force-app/main/default/objects/Process_Task__c/fields/Due_Date_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Indicator__c</fullName>
    <formula>IF(
	AND(
		(NOT(ISPICKVAL(Status__c, &quot;Terminated&quot;))), 
		(NOT(ISPICKVAL(Status__c, &quot;Completed&quot;))),
		(NOT(Subject__c = &quot;Contract - eNett Signoff&quot;)), 
		(NOT(Subject__c = &quot;Contract - eNett - Sign-off&quot;))		
	),

		IF(Due_Date__c &gt;= TODAY (),IMAGE (&quot;/servlet/servlet.FileDownload?file=015O00000012iiz&quot;, &quot;Green&quot;, 20,40),
		IMAGE (&quot;/servlet/servlet.FileDownload?file=015O00000012ij9&quot;, &quot;Red&quot;, 20,40)
), null)</formula>
    <label>Due Date Indicator</label>
    <type>Text</type>
</CustomField>