force-app/main/default/objects/Process_Task__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <label>ECN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>