force-app/main/default/objects/Process_Task__c/fields/eNett_Contract__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up the &#39;eNett Contract&#39; record to which this Task record is related to.</description>
    <inlineHelpText>Looks up the &#39;eNett Contract&#39; record to which this Task record is related to.</inlineHelpText>
    <label>eNett Contract</label>
    <referenceTo>eNett_Contract__c</referenceTo>
    <relationshipLabel>Process Tasks</relationshipLabel>
    <relationshipName>Process_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>