force-app/main/default/objects/Process_Task__c/fields/eNett_Contract_Task_History__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract_Task_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eNett Contract Task History</label>
    <referenceTo>eNett_Contract__c</referenceTo>
    <relationshipLabel>Process Task History</relationshipLabel>
    <relationshipName>Process_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>