force-app/main/default/objects/Process_Task__c/fields/eNett_Contract_Task_Open__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract_Task_Open__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eNett Contract Task Open</label>
    <referenceTo>eNett_Contract__c</referenceTo>
    <relationshipLabel>Open Process Tasks</relationshipLabel>
    <relationshipName>Process_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>