force-app/main/default/objects/Process_Task__c/fields/Enter_the_Date_Funding_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Enter_the_Date_Funding_Occurred__c</fullName>
    <label>Enter the Date Funding Occurred</label>
    <type>Date</type>
</CustomField>