force-app/main/default/objects/Process_Task__c/fields/Estimated_Effort_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_Minutes__c</fullName>
    <label>Estimated Effort Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>