force-app/main/default/objects/Process_Task__c/fields/Estimated_In_Year_GDV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_In_Year_GDV__c</fullName>
    <label>Estimated In Year GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>