force-app/main/default/objects/Process_Task__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <inlineHelpText>Please input the percentage of exclusivity here if you have chosen &quot;yes – percentage&quot; above.</inlineHelpText>
    <label>Exclusivity %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>