force-app/main/default/objects/Process_Task__c/fields/FARRE_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FARRE_Frequency__c</fullName>
    <label>FARRE Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>