force-app/main/default/objects/Process_Task__c/fields/Funding_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Due_Date__c</fullName>
    <label>Funding Due Date</label>
    <type>Date</type>
</CustomField>