force-app/main/default/objects/Process_Task__c/fields/Funding_Model__c.field-meta.xml
<CustomField>
    <fullName>Funding_Model__c</fullName>
    <label>Funding Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funding on Activation</fullName>
            </value>
            <value>
                <fullName>Funding on Authorisation</fullName>
            </value>
            <value>
                <fullName>Funding on Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>