force-app/main/default/objects/Process_Task__c/fields/Funding_Model_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Funding_Model_Additional_Comments__c</fullName>
    <label>Funding Model Additional Comments</label>
    <type>TextArea</type>
</CustomField>