force-app/main/default/objects/Process_Task__c/fields/GDV_Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>GDV_Change_Justification__c</fullName>
    <label>GDV Change Justification</label>
    <type>TextArea</type>
</CustomField>