force-app/main/default/objects/Process_Task__c/fields/Hidden_Pro_Negotiation_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Pro_Negotiation_Further_Details__c</fullName>
    <formula>eNett_Contract__r.Proposal_Negotiation_Further_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Pro/Negotiation Further Details</label>
    <type>Text</type>
</CustomField>