force-app/main/default/objects/Process_Task__c/fields/Hidden_Sales_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Sales_Rejection_Reason__c</fullName>
    <formula>eNett_Contract__r.Sales_Rejection_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Sales Rejection Reason</label>
    <type>Text</type>
</CustomField>