force-app/main/default/objects/Process_Task__c/fields/Hidden_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Task_Subject__c</fullName>
    <label>Hidden Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>