force-app/main/default/objects/Process_Task__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% of Interchange</fullName>
            </value>
            <value>
                <fullName>Fixed %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>