force-app/main/default/objects/Process_Task__c/fields/Interchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Amount__c</fullName>
    <inlineHelpText>Please input the % of interchange based on the tier level here (usually between 20-50)</inlineHelpText>
    <label>% Interchange Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>