force-app/main/default/objects/Process_Task__c/fields/Internal_Account_Approval__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Approval__c</fullName>
    <label>Internal Account Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>