force-app/main/default/objects/Process_Task__c/fields/Is_Contract_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Related__c</fullName>
    <description>Added to identify the Process Tasks that are related to a Contract. Used in triggers.</description>
    <formula>NOT( ISBLANK( eNett_Contract__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Related</label>
    <type>Checkbox</type>
</CustomField>