force-app/main/default/objects/Process_Task__c/fields/Is_Delivery_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Delivery_Related__c</fullName>
    <description>Added to identify the Process Tasks that are related to a Delivery Ticket. Used in triggers.</description>
    <formula>NOT(ISBLANK( Delivery_Ticket__c ))</formula>
    <label>Is Delivery Related</label>
    <type>Checkbox</type>
</CustomField>