force-app/main/default/objects/Process_Task__c/fields/Is_Opportunity_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Related__c</fullName>
    <description>Added to identify the Process Tasks that are related to an Opportunity. Used in triggers.</description>
    <formula>NOT( ISBLANK(  Opportunity__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Opportunity Related</label>
    <type>Checkbox</type>
</CustomField>