force-app/main/default/objects/Process_Task__c/fields/Live_ECN_and_API_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Live_ECN_and_API_Credentials__c</fullName>
    <label>Live ECN and API Credentials</label>
    <type>TextArea</type>
</CustomField>