force-app/main/default/objects/Process_Task__c/fields/Max_Fixed_Share__c.field-meta.xml
<CustomField>
    <fullName>Max_Fixed_Share__c</fullName>
    <formula>MAX( Tier_1_Fixed_Share__c , Tier_2_Fixed_Share__c, Tier_3_Fixed_Share__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Fixed Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>