force-app/main/default/objects/Process_Task__c/fields/Max_Interchange__c.field-meta.xml
<CustomField>
    <fullName>Max_Interchange__c</fullName>
    <formula>MAX( Tier_1_Interchange_Share__c , Tier_2_Interchange_Share__c , Tier_3_Interchange_Share__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Interchange Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>