force-app/main/default/objects/Process_Task__c/fields/NDA_Developer_Signature_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>NDA_Developer_Signature_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA/Developer Signature Not Required</label>
    <type>Checkbox</type>
</CustomField>