force-app/main/default/objects/Process_Task__c/fields/Non_local_Settlement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Non_local_Settlement_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Non-local Settlement Currency</label>
    <type>Checkbox</type>
</CustomField>