force-app/main/default/objects/Process_Task__c/fields/Non_standard_Funding_Fund_on_Auth__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Funding_Fund_on_Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Non-standard Funding (Fund on Auth)</label>
    <type>Checkbox</type>
</CustomField>