force-app/main/default/objects/Process_Task__c/fields/Opportunity_Task_History__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Task_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Task History</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Process Tasks History</relationshipLabel>
    <relationshipName>Process_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>