force-app/main/default/objects/Process_Task__c/fields/Opportunity_Task_Open__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Task_Open__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Task Open</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Open Process Tasks</relationshipLabel>
    <relationshipName>Process_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>