force-app/main/default/objects/Process_Task__c/fields/Projected_Development_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Development_Completed__c</fullName>
    <label>Projected Development Completed</label>
    <type>Date</type>
</CustomField>