force-app/main/default/objects/Process_Task__c/fields/Projected_Live_Testing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Live_Testing_Completed__c</fullName>
    <label>Projected Live Testing Completed</label>
    <type>Date</type>
</CustomField>